--- a/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj
+++ b/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj
@@ -150,6 +150,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Com.h" />
     <ClInclude Include="DuplicationManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
