--- a/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj.filters
+++ b/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="DuplicationManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Com.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
