--- a/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj.filters
+++ b/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj.filters
@@ -83,7 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="common\memcpySSE.asm">
-      <Filter>Source Files</Filter>
+      <Filter>common</Filter>
     </None>
   </ItemGroup>
 </Project>
