--- a/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj
+++ b/DXGIConsoleApplication/DXGIConsoleApplication.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -180,9 +181,10 @@
     <ClCompile Include="TextureConverter.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="common\memcpySSE.asm" />
+    <MASM Include="common\memcpySSE.asm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
